--- a/Home.html
+++ b/Home.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Portfolio website </title>
-    <link rel="stylesheet" href="style.css"><!-- css file link -->
+	<head>
+		<meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Portfolio website </title>
+	    <link rel="stylesheet" href="style.css"><!-- css file link -->
 
-</head>
+	</head>
 
-<body>
-	<header>
-		<div class="logo">
-			<img src="images/The Chromium Guy.png" alt=""> 
-		</div>
-		 <button class="nav-toggle" aria-label="toggle navigation">
-	</header>
-<script src="script.js"></script><!-- javascript file link -->
-</body>
+	<body>
+		<header>
+			<div class="logo">
+				<img src="images/The Chromium Guy.png" alt=""> 
+			</div>
+
+			<button class="nav-toggle" aria-label="toggle navigation">
+				<span class="hamburger"></span>
+			</button>
+
+			<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+					<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
+					<li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+					<li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+				</ul>
+			</nav>
+	    </header>
+
+	   <!-- Introduction  -->
+	   <section class="intro" id="home">
+		   	<h1 class="section__title section__title--intro">
+		   		Hi I am <strong>Lorem ipsum</strong>
+		   	</h1>
+		   	<p class="section__subtitle section__subtitle--intro">Lorem ipsum</p>
+		   	<img src="images/dp-01.png" alt="a picture of dp">
+	   </section>
+
+	   <!-- My services -->
+	   <section class="my-services" id="services">
+	   		<h2 class="section__title section__title--services">What I do</h2>
+	   </section>
+	    <script src="script.js"></script><!-- javascript file link -->
+	</body>
 </html>
