--- a/Home.html
+++ b/Home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	
 	<head>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +23,8 @@
 				<ul class="nav__list">
 					<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
 					<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
-					<li class="nav__item"><a href="#" class="nav__link">My Work</a></li>
+					<li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
+					<li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
 				</ul>
 			</nav>
 	    </header>
@@ -40,7 +41,90 @@
 	   <!-- My services -->
 	   <section class="my-services" id="services">
 	   		<h2 class="section__title section__title--services">What I do</h2>
+	   		<div class="services"><!-- Start of services -->
+	   			<div class="service">
+	   				<h3> Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of service -->
+
+	   			<div class="service">
+	   				<h3>Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of service -->
+
+	   			<div class="service">
+	   				<h3>Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of service -->
+	   		</div><!-- End of services -->
+
+	   		<a href="#work" class="btn">My Work</a>
+
 	   </section>
+
+	   <!-- About me  -->
+	   <section class="about-me" id="about">
+	   		<h2 class="section__title section__title--about">Who I am</h2>
+	   		<p class="section__subtitle section__subtitle--about"></p>
+
+	   		<div class="about-me__body">
+	   			<p></p>
+	   			<p></p>
+	   		</div>
+
+	   		<img src="images/aboutme1.jpg" alt="about me image">
+	   </section>
+
+	    <!-- My Work -->
+	    <section class="my-work" id="work">
+	    	<h2 class="section__title">My work</h2>
+	    	<p class="section__subtitle"></p>
+
+	    	<div class="portfolio">
+	    		<!-- portfolio item 1 -->
+	    		<a href="#" class="portfolio__item">
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+
+	    		<!-- portfolio item 2 -->
+	    		<a href="#" class="portfolio__item">
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+
+	    		<!-- portfolio item 3 -->
+	    		<a href="#" class="portfolio__item">
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+
+	    		<!-- portfolio item 4 -->
+	    		<a href="#" class="portfolio__item">
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+
+	    		<!-- portfolio item 5 -->
+	    		<a href="#" class="portfolio__item">s
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+
+	    		<!-- portfolio item 6 -->
+	    		<a href="#" class="portfolio__item">
+	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
+	    		</a>
+	    	</div>
+	    </section>
+
+
+	    <!-- Footer -->
+	    <footer>
+	    	<!-- Replace with your own mail address  -->
+	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">deeppandya91@gmial.com</a>
+	    	<ul class="social-list">
+	    		<li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/deeppandya">Linkedin</a></li>
+	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
+	    		<li class="social-list__item"><a class="social-list__link">twitter</a></li>
+	    	</ul>
+	    </footer>
 	    <script src="script.js"></script><!-- javascript file link -->
 	</body>
+
 </html>
