--- a/Home.html
+++ b/Home.html
@@ -5,7 +5,10 @@
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Portfolio website </title>
-	    <link rel="stylesheet" href="style.css"><!-- css file link -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" /> 
+        <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+	    <link rel="stylesheet" href="Css/style.css"><!-- css file link -->
 
 	</head>
 
@@ -35,7 +38,7 @@
 		   		Hi I am <strong>Lorem ipsum</strong>
 		   	</h1>
 		   	<p class="section__subtitle section__subtitle--intro">Lorem ipsum</p>
-		   	<img src="images/dp-01.png" alt="a picture of dp">
+		   	<img src="images/portfolio.jpg" alt="a picture of dp">
 	   </section>
 
 	   <!-- My services -->
@@ -117,12 +120,13 @@
 	    <!-- Footer -->
 	    <footer>
 	    	<!-- Replace with your own mail address  -->
-	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">deeppandya91@gmial.com</a>
+	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">deeppandya91@gmail.com</a>
 	    	<ul class="social-list">
 	    		<li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/deeppandya">Linkedin</a></li>
 	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
-	    		<li class="social-list__item"><a class="social-list__link">twitter</a></li>
+	    		<li class="social-list__item"><a class="social-list__link">Twitter</a></li>
 	    	</ul>
+	    	<p class="footer-madeby">Made By Nikhar Pandya</p>
 	    </footer>
 	    <script src="script.js"></script><!-- javascript file link -->
 	</body>
