--- a/Home.html
+++ b/Home.html
@@ -35,10 +35,10 @@
 	   <!-- Introduction  -->
 	   <section class="intro" id="home">
 		   	<h1 class="section__title section__title--intro">
-		   		Hi I am <strong>Lorem ipsum</strong>
+		   		Hi, I am <strong>Lorem ipsum</strong>
 		   	</h1>
-		   	<p class="section__subtitle section__subtitle--intro">Lorem ipsum</p>
-		   	<img src="images/portfolio.jpg" alt="a picture of dp">
+		   	<p class="section__subtitle section__subtitle--intro">Lorem ipsum dolor sit amet</p>
+		   	<img src="images/portfolio.jpg" alt="a picture of dp" class="intro__img">
 	   </section>
 
 	   <!-- My services -->
@@ -68,7 +68,7 @@
 	   <!-- About me  -->
 	   <section class="about-me" id="about">
 	   		<h2 class="section__title section__title--about">Who I am</h2>
-	   		<p class="section__subtitle section__subtitle--about"></p>
+	   		<p class="section__subtitle section__subtitle--about">Aenean gravida est vel egestas aliquam.</p>
 
 	   		<div class="about-me__body">
 	   			<p></p>
@@ -105,7 +105,7 @@
 	    		</a>
 
 	    		<!-- portfolio item 5 -->
-	    		<a href="#" class="portfolio__item">s
+	    		<a href="#" class="portfolio__item">
 	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
 	    		</a>
 
@@ -120,13 +120,13 @@
 	    <!-- Footer -->
 	    <footer>
 	    	<!-- Replace with your own mail address  -->
-	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">deeppandya91@gmail.com</a>
+	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">dummy@gmail.com</a>
 	    	<ul class="social-list">
 	    		<li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/deeppandya">Linkedin</a></li>
 	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
 	    		<li class="social-list__item"><a class="social-list__link">Twitter</a></li>
 	    	</ul>
-	    	<p class="footer-madeby">Made By Nikhar Pandya</p>
+	    	<div class="footer-madeby">Made By Nikhar Pandya</div>
 	    </footer>
 	    <script src="script.js"></script><!-- javascript file link -->
 	</body>
