--- a/Home.html
+++ b/Home.html
@@ -124,7 +124,7 @@
 	    	<ul class="social-list">
 	    		<li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/deeppandya">Linkedin</a></li>
 	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
-	    		<li class="social-list__item"><a class="social-list__link">Twitter</a></li>
+	    		<li class="social-list__item"><a class="social-list__link">Stack overflow</a></li>
 	    	</ul>
 	    	<div class="footer-madeby">Made By Nikhar Pandya</div>
 	    </footer>
