--- a/Home.html
+++ b/Home.html
@@ -65,6 +65,84 @@
 
 	   </section>
 
+
+
+
+
+	   <!-- My Skills -->
+	   <section class="my-skill">
+		   <section class="inner">
+		   		<div class="header">
+		   			<h1>My Skills</h1>
+		   		</div>
+		   		<div class="container">
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+
+		   			<div class="skill-box">
+		   				<div class="skill-title">
+		   					<div class="img">
+		   						<img src="">
+		   					</div>
+		   					<h3>HTMl 5</h3>
+		   				</div>
+		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   			</div>
+		   		</div>
+		   </section>
+		 </section>
+
+
+
+
+
 	   <!-- About me  -->
 	   <section class="about-me" id="about">
 	   		<h2 class="section__title section__title--about">Who I am</h2>
@@ -117,8 +195,11 @@
 	    </section>
 
 
+
+
+
 	    <!-- Footer -->
-	    <footer>
+	    <footer class="footer">
 	    	<!-- Replace with your own mail address  -->
 	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">dummy@gmail.com</a>
 	    	<ul class="social-list">
@@ -126,7 +207,7 @@
 	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
 	    		<li class="social-list__item"><a class="social-list__link">Stack overflow</a></li>
 	    	</ul>
-	    	<div class="footer-madeby">Made By Nikhar Pandya</div>
+	    	<p class="footer-madeby">Made By Nikhar Pandya</p>
 	    </footer>
 	    <script src="script.js"></script><!-- javascript file link -->
 	</body>
