my skills update

--- a/Home.html
+++ b/Home.html
@@ -79,61 +79,61 @@
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/Android.logo.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>Android</h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/kotlin.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>Kotlin</h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p  class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/MongoDB.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>MongoDB</h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p  class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/Android.logo.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>AWS</h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p  class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/Android.logo.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>AI </h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p  class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="">
+		   						<img src="images/Android.logo.png" class="skill-icon">
 		   					</div>
-		   					<h3>HTMl 5</h3>
+		   					<h3>Python</h3>
 		   				</div>
-		   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
+		   				<p  class="skill-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis commodo elementum lacus, facilisis pretium neque convallis a. </p>
 		   			</div>
 		   		</div>
 		   </section>
