--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,7 @@
 					<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
 					<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
 					<li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-					<li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
+					<li class="nav__item"><a href="#work" class="nav__link">Recent Companies</a></li>
 				</ul>
 			</nav>
 	    </header>
@@ -35,9 +35,9 @@
 	   <!-- Introduction  -->
 	   <section class="intro" id="home">
 		   	<h1 class="section__title section__title--intro">
-		   		Hi, I am <strong>Lorem ipsum</strong>
+		   		Hi, I am <strong>Deep Pandya</strong>
 		   	</h1>
-		   	<p class="section__subtitle section__subtitle--intro">Lorem ipsum dolor sit amet</p>
+		   	<p class="section__subtitle section__subtitle--intro">Android Developer</p>
 		   	<img src="images/portfolio.jpg" alt="a picture of dp" class="intro__img">
 	   </section>
 
@@ -61,7 +61,7 @@
 	   			</div><!-- End of service -->
 	   		</div><!-- End of services -->
 
-	   		<a href="#work" class="btn">My Work</a>
+	   		<a href="#work" class="btn">Recent Companies</a>
 
 	   </section>
 
@@ -73,7 +73,7 @@
 	   <section class="my-skill">
 		   <section class="inner">
 		   		<div class="header">
-		   			<h1>My Skills</h1>
+		   			<h1>What I Know</h1>
 		   		</div>
 		   		<div class="container">
 		   			<div class="skill-box">
@@ -146,54 +146,63 @@
 	   <!-- About me  -->
 	   <section class="about-me" id="about">
 	   		<h2 class="section__title section__title--about">Who I am</h2>
-	   		<p class="section__subtitle section__subtitle--about">Aenean gravida est vel egestas aliquam.</p>
+	   		<p class="section__subtitle section__subtitle--about">Android Developer based in Toronto,ON</p>
 
 	   		<div class="about-me__body">
-	   			<p></p>
-	   			<p></p>
+	   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultrices sem eget tincidunt egestas. Ut tempor, purus vitae fermentum dapibus, arcu massa scelerisque erat,aconsectetur risus lectus sit amet ipsum. Integer ac laoreet leo, in accumsan arcu.  </p>
+	   			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultrices sem eget tincidunt egestas. Ut tempor, purus vitae fermentum dapibus, arcu massa scelerisque erat,aconsectetur risus lectus sit amet ipsum. Integer ac laoreet leo, in accumsan arcu.  </p>
 	   		</div>
 
-	   		<img src="images/aboutme1.jpg" alt="about me image">
+	   		<img src="images/aboutme1.jpg" alt="about me image" class="about-me__img">
 	   </section>
 
 	    <!-- My Work -->
-	    <section class="my-work" id="work">
-	    	<h2 class="section__title">My work</h2>
+	   <!--  <section class="my-work" id="work">
+	    	<h2 class="section__title">Recent Companies</h2>
 	    	<p class="section__subtitle"></p>
 
 	    	<div class="portfolio">
-	    		<!-- portfolio item 1 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
-
-	    		<!-- portfolio item 2 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
-
-	    		<!-- portfolio item 3 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
-
-	    		<!-- portfolio item 4 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
-
-	    		<!-- portfolio item 5 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
-
-	    		<!-- portfolio item 6 -->
-	    		<a href="#" class="portfolio__item">
-	    			<img src="images/portfolio.jpg" alt="" class="portfolio__img">
-	    		</a>
+	    		
+	    		
 	    	</div>
 	    </section>
+ -->
 
+   <section class="my-work" id="work">
+	   		<h2 class="section__title section__title--work">Recent Companies</h2>
+	   		<div class="works"><!-- Start of works -->
+	   			<div class="work1">
+	   				<h3> Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+
+	   			<div class="work2">
+	   				<h3>Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+
+	   			<div class="work3">
+	   				<h3>Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+
+	   			<div class="work4">
+	   				<h3> Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+
+	   			<div class="work5">
+	   				<h3> Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+
+	   			<div class="work6">
+	   				<h3> Lorem ipsum</h3>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+	   		</div><!-- End of works -->
+
+  </section>
 
 
 
