update styles and html

--- a/Home.html
+++ b/Home.html
@@ -156,54 +156,45 @@
 	   		<img src="images/aboutme1.jpg" alt="about me image" class="about-me__img">
 	   </section>
 
-	    <!-- My Work -->
-	   <!--  <section class="my-work" id="work">
-	    	<h2 class="section__title">Recent Companies</h2>
-	    	<p class="section__subtitle"></p>
 
-	    	<div class="portfolio">
-	    		
-	    		
-	    	</div>
-	    </section>
- -->
+	   <!-- Recent Companies  -->
 
    <section class="my-work" id="work">
-	   		<h2 class="section__title section__title--work">Recent Companies</h2>
+	   		<h2 class="section__title--work">Recent Companies</h2>
 	   		<div class="works"><!-- Start of works -->
-	   			<div class="work1">
-	   				<h3> Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
-	   			<div class="work2">
-	   				<h3>Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head">Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
-	   			<div class="work3">
-	   				<h3>Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head">Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
-	   			<div class="work4">
-	   				<h3> Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
-	   			<div class="work5">
-	   				<h3> Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
-	   			<div class="work6">
-	   				<h3> Lorem ipsum</h3>
+	   			<div class="work">
+	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 	   		</div><!-- End of works -->
 
   </section>
-
+ 
 
 
 
