--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				<img src="images/The Chromium Guy.png" alt=""> 
+				<img src="images/The Android Guy.png" alt=""> 
 			</div>
 
 			<button class="nav-toggle" aria-label="toggle navigation">
@@ -25,9 +25,9 @@
 			<nav class="nav">
 				<ul class="nav__list">
 					<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-					<li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
-					<li class="nav__item"><a href="#about" class="nav__link">About Me</a></li>
-					<li class="nav__item"><a href="#work" class="nav__link">Recent Companies</a></li>
+					<li class="nav__item"><a href="#services" class="nav__link">What I Do</a></li>
+					<li class="nav__item"><a href="#about" class="nav__link">Who Am I</a></li>
+					<li class="nav__item"><a href="#work" class="nav__link">Where I Used To Work</a></li>
 				</ul>
 			</nav>
 	    </header>
@@ -109,7 +109,7 @@
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="images/Android.logo.png" class="skill-icon">
+		   						<img src="images/download.png" class="skill-icon">
 		   					</div>
 		   					<h3>AWS</h3>
 		   				</div>
@@ -129,7 +129,7 @@
 		   			<div class="skill-box">
 		   				<div class="skill-title">
 		   					<div class="img">
-		   						<img src="images/Android.logo.png" class="skill-icon">
+		   						<img src="images/python (1).png" class="skill-icon">
 		   					</div>
 		   					<h3>Python</h3>
 		   				</div>
@@ -160,35 +160,34 @@
 	   <!-- Recent Companies  -->
 
    <section class="my-work" id="work">
-	   		<h2 class="section__title--work">Recent Companies</h2>
+	   		<h2 class="section__title--work">Where I Used To Work</h2>
 	   		<div class="works"><!-- Start of works -->
 	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
+	   				<div class="work-head"><h3 class="recent-head"> Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
 	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head">Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
+	   				<div class="work-head"><h3 class="recent-head">Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
+	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
+	   			</div><!-- End of work -->
+	   			<div class="work">
+	   				<div class="work-head"><h3 class="recent-head">Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
 	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head">Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
+	   				<div class="work-head"><h3 class="recent-head"> Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
 	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
+	   				<div class="work-head"><h3 class="recent-head"> Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
 	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
-	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
-	   			</div><!-- End of work -->
-
-	   			<div class="work">
-	   				<div class="work-head"><p class="recent-head"> Lorem ipsum</p><p class="recent-date">yyyy-yyyy</p></div>
+	   				<div class="work-head"><h3 class="recent-head"> Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 	   		</div><!-- End of works -->
@@ -203,11 +202,14 @@
 	    	<!-- Replace with your own mail address  -->
 	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">dummy@gmail.com</a>
 	    	<ul class="social-list">
-	    		<li class="social-list__item"><a class="social-list__link" href="https://www.linkedin.com/in/deeppandya">Linkedin</a></li>
-	    		<li class="social-list__item"><a class="social-list__link" href="https://github.com/deeppandya">Github</a></li>
-	    		<li class="social-list__item"><a class="social-list__link">Stack overflow</a></li>
+	    		<li class="social-list__item">
+	    			<a class="social-list__link" href="https://www.linkedin.com/in/deeppandya"><i class="fab fa-linkedin"></i></a>
+	    		</li>
+	    		<li class="social-list__item">
+	    			<a class="social-list__link" href="https://github.com/deeppandya"><i class="fab fa-github"></i></a>
+	    		</li>
 	    	</ul>
-	    	<p class="footer-madeby">Made By Nikhar Pandya</p>
+	    	<a href="https://www.linkedin.com/in/nikhar-pandya" class="footer-link">Made By Nikhar Pandya</a>
 	    </footer>
 	    <script src="script.js"></script><!-- javascript file link -->
 	</body>
