--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				<img src="images/The Android Guy.png" alt=""> 
+				<img src="images/TheGuy.png" alt=""> 
 			</div>
 
 			<button class="nav-toggle" aria-label="toggle navigation">
@@ -26,6 +26,7 @@
 				<ul class="nav__list">
 					<li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
 					<li class="nav__item"><a href="#services" class="nav__link">What I Do</a></li>
+					<li class="nav__item"><a href="#skills" class="nav__link">What I Know</a></li>
 					<li class="nav__item"><a href="#about" class="nav__link">Who Am I</a></li>
 					<li class="nav__item"><a href="#work" class="nav__link">Where I Used To Work</a></li>
 				</ul>
@@ -70,7 +71,7 @@
 
 
 	   <!-- My Skills -->
-	   <section class="my-skill">
+	   <section class="my-skill" id="skills">
 		   <section class="inner">
 		   		<div class="header">
 		   			<h1>What I Know</h1>
