--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
 	<body>
 		<header>
 			<div class="logo">
-				<img src="images/TheGuy.png" alt=""> 
+				<img src="images/TheGuylogo.png" alt=""> 
 			</div>
 
 			<button class="nav-toggle" aria-label="toggle navigation">
@@ -62,7 +62,7 @@
 	   			</div><!-- End of service -->
 	   		</div><!-- End of services -->
 
-	   		<a href="#work" class="btn">Recent Companies</a>
+	   		<a href="#work" class="btn">Where I Used To Work</a>
 
 	   </section>
 
@@ -164,7 +164,7 @@
 	   		<h2 class="section__title--work">Where I Used To Work</h2>
 	   		<div class="works"><!-- Start of works -->
 	   			<div class="work">
-	   				<div class="work-head"><h3 class="recent-head"> Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
+	   				<div class="work-head"><h3 class="recent-head">Lorem ipsum</h3><h3 class="recent-date">9999-2000</h3></div>
 	   				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi fermentum sodales ipsum, vitae mattis orci tincidunt vel. Ut posuere ultricies gravida. In quis gravida purus. Etiam ut libero vitae nisl posuere varius sit amet eu mauris. </p>
 	   			</div><!-- End of work -->
 
@@ -212,7 +212,7 @@
 	    	</ul>
 	    	<a href="https://www.linkedin.com/in/nikhar-pandya" class="footer-link">Made By Nikhar Pandya</a>
 	    </footer>
-	    <script src="script.js"></script><!-- javascript file link -->
+	    <script src="js/index.js"></script><!-- javascript file link -->
 	</body>
 
 </html>
