--- a/Home.html
+++ b/Home.html
@@ -201,7 +201,7 @@
 	    <!-- Footer -->
 	    <footer class="footer">
 	    	<!-- Replace with your own mail address  -->
-	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">dummy@gmail.com</a>
+	    	<a href="mailto:deepandya91@gmail.com" class="footer-link">@gmail.com</a>
 	    	<ul class="social-list">
 	    		<li class="social-list__item">
 	    			<a class="social-list__link" href="https://www.linkedin.com/in/deeppandya"><i class="fab fa-linkedin"></i></a>
