--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
 	   <!-- Introduction  -->
 	   <section class="intro" id="home">
 		   	<h1 class="section__title section__title--intro">
-		   		Hi, I am <strong>Deep Pandya</strong>
+		   		Hi, I am <strong>Raymond Blue</strong>
 		   	</h1>
 		   	<p class="section__subtitle section__subtitle--intro">Android Developer</p>
 		   	<img src="images/portfolio.jpg" alt="a picture of dp" class="intro__img">
